--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -28,7 +28,7 @@ msgstr ""
 "Project-Id-Version: debian-installer/sublevel1\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2022-01-08 21:43+0100\n"
+"PO-Revision-Date: 2022-01-20 22:07+0100\n"
 "Last-Translator: Frans Spiesschaert <Frans.Spiesschaert@yucom.be>\n"
 "Language-Team: Debian Dutch l10n Team <debian-l10n-dutch@lists.debian.org>\n"
 "Language: nl\n"
@@ -164,7 +164,7 @@ msgstr ""
 #. :sl3:
 #: ../nobootloader.templates:5001
 msgid "No boot loader installed"
-msgstr "Er is geen opstartlader geïnstalleerd"
+msgstr "Er is geen bootloader geïnstalleerd"
 
 #. Type: note
 #. Description
@@ -174,9 +174,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Er is geen opstartlader geïnstalleerd. Dit komt of doordat u hiervoor "
-"gekozen heeft, of doordat uw specifieke architectuur nog geen opstartlader "
-"ondersteunt."
+"Er is geen bootloader geïnstalleerd. Dit komt of doordat u hiervoor gekozen "
+"heeft, of doordat uw specifieke architectuur nog geen bootloader ondersteunt."
 
 #. Type: note
 #. Description
