--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nobootloader (1.64) UNRELEASED; urgency=medium
+
+  [ Debian Janitor ]
+  * Add missing ${misc:Depends} to Depends for nobootloader.
+  * Bump debhelper from deprecated 9 to 13.
+  * Set debhelper-compat version in Build-Depends.
+
+ -- Samuel Thibault <sthibault@debian.org>  Sat, 29 Jan 2022 21:30:07 +0100
+
 nobootloader (1.63) unstable; urgency=medium
 
   * Team upload
