--- a/debian/po/zh_CN.po
+++ b/debian/po/zh_CN.po
@@ -26,16 +26,21 @@
 #   YunQiang Su <wzssyqa@gmail.com>, 2011.
 #
 #   Mai Hao Hui <mhh@126.com>, 2001 (translations from galeon)
-# YunQiang Su <wzssyqa@gmail.com>, 2010, 2011.
+# YunQiang Su <wzssyqa@gmail.com>, 2010, 2011, 2012, 2013.
+# Yangfl <mmyangfl@gmail.com>, 2017.
+# Boyuan Yang <073plan@gmail.com>, 2018, 2019, 2020.
+# 玉堂白鹤 <yjwork@qq.com>, 2020.
+# TTT DEAL <ikmn2jlt@linshiyouxiang.net>, 2021.
+# Wenbin Lv <wenbin816@gmail.com>, 2022.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: nobootloader@packages.debian.org\n"
 "POT-Creation-Date: 2019-09-26 22:04+0000\n"
-"PO-Revision-Date: 2011-08-11 11:13+0800\n"
-"Last-Translator: YunQiang Su <wzssyqa@gmail.com>\n"
-"Language-Team: Chinese (simplified) <i18n-zh@googlegroups.com>\n"
+"PO-Revision-Date: 2022-04-17 17:12+0000\n"
+"Last-Translator: Wenbin Lv <wenbin816@gmail.com>\n"
+"Language-Team: <debian-l10n-chinese@lists.debian.org>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -99,8 +104,8 @@ msgid ""
 "will reboot.  At the firmware prompt, set the following firmware variables "
 "to enable auto-booting:"
 msgstr ""
-"要使系统能自动启动您的系统，您需要在 Genesi 固件中设置一些变量。在安装结束"
-"后，系统将会重启。在出现固件提示符后，请设置以下固件变量以开启自动启动功能："
+"要使系统能自动启动，您需要在 Genesi 固件中设置一些变量。在安装结束后，系统将"
+"会重启。在出现固件提示符后，请设置以下固件变量以开启自动启动功能："
 
 #. Type: note
 #. Description
@@ -110,8 +115,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to your newly installed system."
 msgstr ""
-"此过程只需要被执行一次。然后，请输入“boot”命令或重启系统以进入您新安装好的系"
-"统。"
+"您只需执行一次此操作。然后，请输入 \"boot\" 命令或重启系统以进入您新安装好的"
+"系统。"
 
 #. Type: note
 #. Description
@@ -120,7 +125,7 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering, at "
 "the firmware prompt:"
-msgstr "另外，您可以在固件提示符下输入以下内容来手工启动内核："
+msgstr "另外，您可以在固件提示符下输入以下内容来手动启动内核："
 
 #. Type: note
 #. Description
@@ -131,8 +136,8 @@ msgid ""
 "automatically. At the end of installation, the system will reboot. At the "
 "firmware prompt, set the following variables to simplify booting:"
 msgstr ""
-"要使系统能自动启动您的系统，您需要在 CFE 中设置一些变量。在安装结束后，系统将"
-"会重启。在出现固件提示符后，请设置以下变量以简化启动过程："
+"要使系统能自动启动，您需要在 CFE 中设置一些变量。在安装结束后，系统将会重启。"
+"在出现固件提示符后，请设置以下变量以简化启动过程："
 
 #. Type: note
 #. Description
@@ -142,8 +147,8 @@ msgid ""
 "You will only need to do this once. This enables you to just issue the "
 "command \"boot_debian\" at the CFE prompt."
 msgstr ""
-"您只需执行一次此操作。从此之后您只要在 CFE 提示符下使用“boot_debian”命令就可"
-"以了。"
+"您只需执行一次此操作。从此之后您只要在 CFE 提示符下运行 \"boot_debian\" 命令"
+"就可以了。"
 
 #. Type: note
 #. Description
@@ -170,8 +175,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"未安装启动引导器，其原因可能是您选择了不安装或者您的特殊硬件体系尚不支持启动"
-"引导器。"
+"未安装启动引导器，其原因可能是您选择了不安装，或者您的特殊硬件体系尚不支持启"
+"动引导器。"
 
 #. Type: note
 #. Description
