--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.65) UNRELEASED; urgency=medium
+
+  * Remove Stephen R. Marenka from Uploaders. (Closes: #1012371)
+
+ -- Holger Wansing <hwansing@mailbox.org>  Tue, 07 Jun 2022 22:58:15 +0200
+
 nobootloader (1.64) unstable; urgency=medium
 
   * Team upload
