--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
-nobootloader (1.65) UNRELEASED; urgency=medium
+nobootloader (1.65) unstable; urgency=medium
+
+  * Team upload
 
   * Remove Stephen R. Marenka from Uploaders. (Closes: #1012371)
 
- -- Holger Wansing <hwansing@mailbox.org>  Tue, 07 Jun 2022 22:58:15 +0200
+  [ Updated translations ]
+  * Vietnamese (vi.po) by Trần Ngọc Quân
+
+ -- Holger Wansing <hwansing@mailbox.org>  Mon, 18 Jul 2022 14:34:32 +0200
 
 nobootloader (1.64) unstable; urgency=medium
 
